--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,5 @@ authors = ["Your Name <you@example.com>"]
 requires-python = ">=3.11"
 dependencies = [
     "discord-py>=2.4.0",
+    "flask>=3.1.0",
 ]
