--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,11 @@ ENV/
 env.bak/
 venv.bak/
 
+# Discord Bot specific
+orders.db
+attached_assets/
+generated-icon.png
+
 # Spyder project settings
 .spyderproject
 .spyproject
