--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,6 @@ requires-python = ">=3.11"
 dependencies = [
     "discord-py>=2.4.0",
     "flask>=3.1.0",
+    "psutil>=6.1.1",
     "python-dotenv>=1.0.1",
 ]
